--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@casl/ability": "^6.7.1",
     "@casl/react": "^4.0.0",
+    "@tanstack/react-query": "^5.52.0",
+    "clsx": "^2.1.1",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.2",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
   },
