--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@casl/ability": "^6.7.1",
     "@casl/react": "^4.0.0",
     "@tanstack/react-query": "^5.52.0",
+    "bootstrap-icons": "^1.11.3",
     "clsx": "^2.1.1",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
