--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.52.0",
     "bootstrap-icons": "^1.11.3",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -24,6 +25,8 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.53.2",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
