--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 RENTIN_PROD_API_URL=https://tms-prod-api.azurewebsites.net
-RENTIN_API_URL=https://tms-staging-api.azurewebsites.net
+RENTIN_API_URL=http://localhost:5260/api
